--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -1,6 +1,5 @@
-#new-tweet-form {
-  /* position: relative;
-  bottom: 50px; */
+.new-tweet {
+  padding-left: 4%;
 }
 
 #new-tweet-form textarea {
@@ -22,15 +21,10 @@
   font-size: 20px;
   padding: 4px 6px;
   cursor: pointer;
-  position: absolute;
-  top: 70px;
 }
 
 .counter {
-  align-self: flex-end;
-  position: relative;
-  top: 18px;
-  left: 15px;
+  padding-left: 80%;
 }
 
 .hidden {
@@ -57,13 +51,9 @@
   }
 
   .counter {
+    padding: 0px;
     position: absolute;
     top: 75px;
     left: 910px;
-  }
-
-  p.text {
-    position: relative;
-    top: 30px;
   }
 }
